<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="?attr/profileSize"
                android:layout_height="?attr/profileSize"
                android:layout_marginTop="?attr/profileTopMargin"
                android:scaleType="centerCrop"
                android:src="@drawable/photo"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="?attr/titleHorizontalMargin"
                android:layout_marginTop="?attr/nameTopMargin"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:text="@string/full_name"
                android:textColor="?attr/nameColor"
                android:textSize="?attr/nameFontSize"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_image" />

            <TextView
                android:id="@+id/tv_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="?attr/titleHorizontalMargin"
                android:layout_marginTop="?attr/titleTopMargin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/title_1"
                android:textColor="?attr/titleColor"
                android:textSize="?attr/titleFontSize"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

            <TextView
                android:id="@+id/tv_body_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="?attr/bodyHorizontalMargin"
                android:layout_marginTop="?attr/bodyTopMargin"
                android:gravity="left"
                android:text="@string/body_1"
                android:textColor="?attr/bodyColor"
                android:textSize="?attr/bodyFontSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_1" />

            <TextView
                android:id="@+id/tv_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="?attr/titleHorizontalMargin"
                android:layout_marginTop="?attr/titleTopMargin"
                android:lines="1"
                android:text="@string/title_2"
                android:textColor="?attr/titleColor"
                android:textSize="?attr/titleFontSize"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_body_1" />

            <TextView
                android:id="@+id/tv_body_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="?attr/bodyHorizontalMargin"
                android:layout_marginTop="?attr/bodyTopMargin"
                android:gravity="left"
                android:text="@string/body_2"
                android:textColor="?attr/bodyColor"
                android:textSize="?attr/bodyFontSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_2" />

            <TextView
                android:id="@+id/tv_title_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="?attr/titleHorizontalMargin"
                android:layout_marginTop="?attr/titleTopMargin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/title_3"
                android:textColor="?attr/titleColor"
                android:textSize="?attr/titleFontSize"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_body_2" />

            <TextView
                android:id="@+id/tv_body_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="?attr/bodyHorizontalMargin"
                android:layout_marginTop="?attr/bodyTopMargin"
                android:gravity="left"
                android:text="@string/body_3"
                android:textColor="?attr/bodyColor"
                android:textSize="?attr/bodyFontSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@android:drawable/ic_menu_call" />
</FrameLayout>